  * optimization: faster WITHOUT-GCING
  * bug fix: when JOIN-THREAD signals an error, do it when not holding
    important locks so that the debugger/handler doesn't produce
    recursive errors or deadlock.
  * bug fix: real-time signals are not used anymore, so no more
    hanging when the system wide real-time signal queue gets full.
  * bug fix: finalizers, gc hooks never run in a WITHOUT-INTERRUPTS
  * bug fix: fix deadlocks related to starting threads

changes in sbcl-1.0.25 relative to 1.0.24:
  * incompatible change: SB-INTROSPECT:FUNCTION-ARGLIST is deprecated, to be
    removed later. Please use SB-INTROSPECT:FUNCTION-LAMBDA-LIST instead.
  * new feature: SB-INTROSPECT:DEFTYPE-LAMBDA-LIST allows retrieval of
    DEFTYPE lambda lists. (thanks to Tobias Rittweiler)
  * enhancement: MUTEX-VALUE is to be superseded by MUTEX-OWNER that has a
    better name and does not return values so stale on multiprocessor systems.
    Also, HOLDING-MUTEX-P was added for about the only sane usage of
    MUTEX-OWNER.
  * improvement: unithread builds keep track of MUTEX-VALUE.
  * improvement: reading from a TWO-WAY-STREAM does not touch the output
    stream anymore making it thread safe to have a concurrent reader and
    a writer, for instance, in a pipe.
  * improvement: GET-SETF-EXPANDER avoids adding bindings for constant
    arguments, making compiler-macros for SETF-functions able to inspect
    their constant arguments.
  * improvement: COMPILE-FILE reports times with millisecond accuracy
    (thanks to Luis Oliveira)
  * optimization: CHAR-CODE type derivation has been improved, making
    TYPEP elimination on subtypes of CHARACTER work better. (reported
    by Tobias Rittweiler, patch by Paul Khuong)
  * bug fix: setting alien structure fields of type struct by value now
    computes the right offset for the memory copy.
  * bug fix: compilation problem involving inlined calls to aliens with
    result type VOID. (reported by Ken Olum)