@@ -15,6 +15,8 @@ changes in sbcl-1.0.26 relative to 1.0.25:
     recursive errors or deadlock.
   * bug fix: real-time signals are not used anymore, so no more
     hanging when the system wide real-time signal queue gets full.
+  * bug fix: INTERRUPT-THREAD on a dying thread could produce memory
+    fault.
   * bug fix: finalizers, gc hooks never run in a WITHOUT-INTERRUPTS
   * bug fix: fix deadlocks related to starting threads
 
